--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -2,11 +2,16 @@
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
 includePaths.library = APPLICATION_PATH "/../library"
+autoloadernamespaces[] = "My"
+pluginpaths.My_Application_Resource = APPLICATION_PATH "/../library/My/"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
+
+resources.view.doctype = "HTML5"
+resources.view.contentType = "text/html; charset=utf-8"
 
 resources.Jquery.version = 1.11.1 
 resources.Jquery.uienable = true
